# seabass

./: README.md  example.ipynb  index.html  lmm.ipynb  pyproject.toml  requirements.txt  setup.cfg
.ipynb_checkpoints/: README-checkpoint.md
R/: screener.Rmd  screener.stan
assets/css/: main.css
model_runs/: analyzed_data.sh
publications/: build_pubs.sh  genetics.html  ml.html  publications.bib  publications.tex  working.html
seabass/old/: seabass_module_version.py
src/: header.html  hier_alt.py  hier_guide_prior.py  hier_hier.py  hier_usage.py  lmm.ipynb  lmm.py  lmm_hier.py  lmm_hier_nt.py  multiday.py  nt_model.py  run.py  run_hier.py  run_hier_alt.py  run_seabass.py  seabass.py  seabass_hier.py  tests.py
src/.ipynb_checkpoints/: run_hier-checkpoint.py  run_hier_alt-checkpoint.py  seabass-checkpoint.py
src/:/run/user/91104/jupyter/: kernel-23804deb-9cc2-47c6-90ce-43161689d032.json  kernel-b3535e75-7d85-4ecf-a370-d09e8ddf845a.json  kernel-e27bf559-f68c-4281-9206-8628a4b23313.json  kernel-f93472ab-1c53-4a41-9688-0ae7199f5847.json
