[build-system]
#requires = ["setuptools ~= 58.0", "wheel"]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "seabass/*.py"
]

[project]
name = "seabass_package"
version = "0.0.1"
authors = [
  { name="David A Knowles", email="daknowles@nygenome.org" },
]
description = "SEABASS is a hierarchical linear mixed model for analysing CRISPR screen data. It can handle multiple time-points and replicates. It uses stochastic variational inference, implemented in `pyro` to fit model parameters. This enables using heavy-tailed noise distributions which provide a better fit to data and robustness to outliers. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/daklab/seabass"
"Bug Tracker" = "https://github.com/daklab/seabass/issues"